--- a/mars_explorer/pyproject.toml
+++ b/mars_explorer/pyproject.toml
@@ -2,7 +2,7 @@
 name = "mars_explorer"
 version = "0.1.0"
 description = "mars-explorer using crewAI"
-authors = [{ name = "Your Name", email = "you@example.com" }]
+authors = [{ name = "Helena Sanchez, Nuria Cardona, Laia Barcenilla and Natalia Munoz"}]
 requires-python = ">=3.10,<3.14"
 dependencies = [
     "crewai[tools]>=0.165.1,<1.0.0",
